@@ -2,7 +2,6 @@ package com.wcc.platform.controller;
 
 import static com.wcc.platform.factories.MockMvcRequestFactory.getRequest;
 import static com.wcc.platform.factories.MockMvcRequestFactory.postRequest;
-import static com.wcc.platform.factories.SetupMenteeFactories.createMenteeTest;
 import static com.wcc.platform.factories.SetupMentorFactories.createMentorDtoTest;
 import static com.wcc.platform.factories.SetupMentorFactories.createMentorTest;
 import static com.wcc.platform.factories.SetupMentorFactories.createUpdatedMentorTest;
@@ -21,11 +20,9 @@ import com.wcc.platform.configuration.TestConfig;
 import com.wcc.platform.domain.exceptions.MemberNotFoundException;
 import com.wcc.platform.domain.exceptions.MentorStatusException;
 import com.wcc.platform.domain.platform.member.ProfileStatus;
-import com.wcc.platform.domain.platform.mentorship.Mentee;
 import com.wcc.platform.domain.platform.mentorship.Mentor;
 import com.wcc.platform.domain.platform.mentorship.MentorDto;
 import com.wcc.platform.domain.platform.type.MemberType;
-import com.wcc.platform.service.MenteeService;
 import com.wcc.platform.service.MentorshipService;
 import java.util.List;
 import org.junit.jupiter.api.DisplayName;
@@ -38,24 +35,23 @@ import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 
-/** Unit test for mentorship APIs. */
+/** Unit test for MentorController. */
 @ActiveProfiles("test")
 @Import({SecurityConfig.class, TestConfig.class})
-@WebMvcTest(MentorshipController.class)
-class MentorshipControllerTest {
+@WebMvcTest(MentorController.class)
+class MentorControllerTest {
 
   private static final String API_MENTORS = "/api/platform/v1/mentors";
-  private static final String API_MENTEES = "/api/platform/v1/mentees";
   private static final String API_KEY_HEADER = "X-API-KEY";
   private static final String API_KEY_VALUE = "test-api-key";
   private final ObjectMapper objectMapper = new ObjectMapper();
 
   @Autowired private MockMvc mockMvc;
   @MockBean private MentorshipService mentorshipService;
-  @MockBean private MenteeService menteeService;
 
   @Test
-  void testGetAllMentorsReturnsOk() throws Exception {
+  @DisplayName("Given mentors exist, when getting all mentors, then return 200 OK")
+  void shouldGetAllMentorsAndReturnOk() throws Exception {
     List<MentorDto> mockMentors = List.of(createMentorTest("Jane").toDto());
     when(mentorshipService.getAllMentors()).thenReturn(mockMentors);
 
@@ -68,7 +64,8 @@ class MentorshipControllerTest {
   }
 
   @Test
-  void testCreateMentorReturnsCreated() throws Exception {
+  @DisplayName("Given valid mentor DTO, when creating mentor, then return 201 Created")
+  void shouldCreateMentorAndReturnCreated() throws Exception {
     var mentorRequestBody = createMentorDtoTest(1L, MemberType.MENTOR);
     var returnedMentor = createMentorTest("Jane");
     when(mentorshipService.create(any(Mentor.class))).thenReturn(returnedMentor);
@@ -82,28 +79,8 @@ class MentorshipControllerTest {
   }
 
   @Test
-  void testCreateMenteeReturnsCreated() throws Exception {
-    Mentee mockMentee = createMenteeTest(2L, "Mark", "mark@test.com");
-    var currentYear = java.time.Year.now();
-
-    when(menteeService.saveRegistration(any())).thenReturn(mockMentee);
-
-    mockMvc
-        .perform(
-            MockMvcRequestBuilders.post(API_MENTEES)
-                .header(API_KEY_HEADER, API_KEY_VALUE)
-                .contentType(APPLICATION_JSON)
-                .content(
-                    "{\"mentee\":{\"id\":2,\"fullName\":\"Mark\",\"email\":\"mark@test.com\",\"position\":\"Software Engineer\",\"slackDisplayName\":\"mark-slack\",\"country\":{\"countryCode\":\"US\",\"countryName\":\"USA\"},\"city\":\"New York\",\"companyName\":\"Tech Corp\",\"images\":[],\"network\":[],\"profileStatus\":\"ACTIVE\",\"bio\":\"Mentee bio\",\"skills\":{\"yearsExperience\":2,\"areas\":[{\"technicalArea\":\"BACKEND\",\"proficiencyLevel\":\"BEGINNER\"}],\"languages\":[{\"language\":\"JAVASCRIPT\",\"proficiencyLevel\":\"BEGINNER\"}],\"mentorshipFocus\":[\"GROW_BEGINNER_TO_MID\"]}},\"mentorshipType\":\"AD_HOC\",\"cycleYear\":\""
-                        + currentYear
-                        + "\",\"applications\":[{\"menteeId\":null,\"mentorId\":1,\"priorityOrder\":1}]}"))
-        .andExpect(status().isCreated())
-        .andExpect(jsonPath("$.id", is(2)))
-        .andExpect(jsonPath("$.fullName", is("Mark")));
-  }
-
-  @Test
-  void testUpdateMentorReturnsOk() throws Exception {
+  @DisplayName("Given valid mentor ID and DTO, when updating mentor, then return 200 OK")
+  void shouldUpdateMentorAndReturnOk() throws Exception {
     Long mentorId = 1L;
     Mentor existingMentor = createMentorTest();
     MentorDto mentorDto = createMentorTest().toDto();
@@ -122,7 +99,8 @@ class MentorshipControllerTest {
   }
 
   @Test
-  void testUpdateMentorReturnsUpdatedFields() throws Exception {
+  @DisplayName("Given valid mentor ID and DTO, when updating mentor, then return updated fields")
+  void shouldUpdateMentorAndReturnUpdatedFields() throws Exception {
     Long mentorId = 1L;
     Mentor existingMentor = createMentorTest();
     MentorDto mentorDto = createMentorTest().toDto();
@@ -140,7 +118,8 @@ class MentorshipControllerTest {
         .andExpect(jsonPath("$.id", is(1)))
         .andExpect(jsonPath("$.bio", is(updatedMentor.getBio())))
         .andExpect(jsonPath("$.spokenLanguages", hasSize(2)))
-        .andExpect(jsonPath("$.spokenLanguages[0]", is(updatedMentor.getSpokenLanguages().get(0))))
+        .andExpect(
+            jsonPath("$.spokenLanguages[0]", is(updatedMentor.getSpokenLanguages().getFirst())))
         .andExpect(jsonPath("$.spokenLanguages[1]", is(updatedMentor.getSpokenLanguages().get(1))))
         .andExpect(
             jsonPath("$.skills.yearsExperience", is(updatedMentor.getSkills().yearsExperience())))
@@ -172,7 +151,8 @@ class MentorshipControllerTest {
   }
 
   @Test
-  void testUpdateNonExistentMentorThrowsException() throws Exception {
+  @DisplayName("Given non-existent mentor ID, when updating mentor, then return 404 Not Found")
+  void shouldReturnNotFoundWhenUpdatingNonExistentMentor() throws Exception {
     Long nonExistentMentorId = 999L;
     MentorDto mentorDto = createMentorTest().toDto();
 
@@ -189,11 +169,12 @@ class MentorshipControllerTest {
   }
 
   @Test
-  void testAcceptMentorReturnsOk() throws Exception {
+  @DisplayName(
+      "Given pending mentor, when accept is called, then returns 200 OK with ACTIVE status")
+  void shouldAcceptMentorAndReturnOk() throws Exception {
     Long mentorId = 1L;
     Mentor pendingMentor = createMentorTest("Jane");
     MentorDto mentorDto = createMentorDtoTest(mentorId, MemberType.MENTOR);
-    // Explicitly set the status to ACTIVE in the DTO, which is now respected by the factory
     mentorDto =
         MentorDto.mentorDtoBuilder()
             .id(mentorDto.getId())
@@ -217,7 +198,7 @@ class MentorshipControllerTest {
 
     Mentor acceptedMentor = createUpdatedMentorTest(pendingMentor, mentorDto);
 
-    when(mentorshipService.activateMentor(eq(mentorId))).thenReturn(acceptedMentor);
+    when(mentorshipService.activateMentor(mentorId)).thenReturn(acceptedMentor);
 
     mockMvc
         .perform(
@@ -233,10 +214,10 @@ class MentorshipControllerTest {
   @DisplayName(
       "Given mentor already accepted (ACTIVE), when accept is called again, then"
           + " returns 409 Conflict")
-  void testAcceptAlreadyAcceptedMentorReturnsConflict() throws Exception {
+  void shouldReturnConflictWhenAcceptingAlreadyActiveMentor() throws Exception {
     Long mentorId = 1L;
 
-    when(mentorshipService.activateMentor(eq(mentorId)))
+    when(mentorshipService.activateMentor(mentorId))
         .thenThrow(new MentorStatusException("Mentor with ID " + mentorId + " is already active"));
 
     mockMvc
@@ -248,10 +229,11 @@ class MentorshipControllerTest {
   }
 
   @Test
-  void testAcceptNonExistentMentorReturnsNotFound() throws Exception {
+  @DisplayName("Given non-existent mentor, when accept is called, then returns 404 Not Found")
+  void shouldReturnNotFoundWhenAcceptingNonExistentMentor() throws Exception {
     Long nonExistentMentorId = 999L;
 
-    when(mentorshipService.activateMentor(eq(nonExistentMentorId)))
+    when(mentorshipService.activateMentor(nonExistentMentorId))
         .thenThrow(new MemberNotFoundException(nonExistentMentorId));
 
     mockMvc
@@ -263,8 +245,94 @@ class MentorshipControllerTest {
 
   @Test
   @DisplayName(
-      "Given mentor with isWomenNonBinary=true, when creating mentor, then response includes the field")
-  void testCreateMentorWithIsWomenNonBinaryReturnsFieldInResponse() throws Exception {
+      "Given pending mentor, when reject is called, then returns 200 OK with REJECTED status")
+  void shouldRejectMentorAndReturnOk() throws Exception {
+    Long mentorId = 1L;
+    Mentor pendingMentor = createMentorTest("Jane");
+    MentorDto mentorDto = createMentorDtoTest(mentorId, MemberType.MENTOR);
+    mentorDto =
+        MentorDto.mentorDtoBuilder()
+            .id(mentorDto.getId())
+            .fullName(mentorDto.getFullName())
+            .position(mentorDto.getPosition())
+            .email(mentorDto.getEmail())
+            .slackDisplayName(mentorDto.getSlackDisplayName())
+            .country(mentorDto.getCountry())
+            .city(mentorDto.getCity())
+            .companyName(mentorDto.getCompanyName())
+            .images(mentorDto.getImages())
+            .network(mentorDto.getNetwork())
+            .profileStatus(ProfileStatus.REJECTED)
+            .spokenLanguages(mentorDto.getSpokenLanguages())
+            .bio(mentorDto.getBio())
+            .skills(mentorDto.getSkills())
+            .menteeSection(mentorDto.getMenteeSection())
+            .feedbackSection(mentorDto.getFeedbackSection())
+            .resources(mentorDto.getResources())
+            .build();
+
+    Mentor rejectedMentor = createUpdatedMentorTest(pendingMentor, mentorDto);
+
+    String rejectionReason = "Not a good fit at this time";
+    when(mentorshipService.rejectMentor(mentorId, rejectionReason)).thenReturn(rejectedMentor);
+
+    mockMvc
+        .perform(
+            MockMvcRequestBuilders.patch(API_MENTORS + "/" + mentorId + "/reject")
+                .header(API_KEY_HEADER, API_KEY_VALUE)
+                .contentType(APPLICATION_JSON)
+                .content("{\"reason\": \"" + rejectionReason + "\"}"))
+        .andExpect(status().isOk())
+        .andExpect(jsonPath("$.id", is(1)))
+        .andExpect(jsonPath("$.fullName", is(rejectedMentor.getFullName())))
+        .andExpect(jsonPath("$.profileStatus", is("REJECTED")));
+  }
+
+  @Test
+  @DisplayName(
+      "Given mentor already rejected (REJECTED), when reject is called again, then"
+          + " returns 409 Conflict")
+  void shouldReturnConflictWhenRejectingAlreadyRejectedMentor() throws Exception {
+    Long mentorId = 1L;
+    String rejectionReason = "Not a good fit at this time";
+
+    when(mentorshipService.rejectMentor(eq(mentorId), any()))
+        .thenThrow(
+            new MentorStatusException("Mentor with ID " + mentorId + " is already rejected"));
+
+    mockMvc
+        .perform(
+            MockMvcRequestBuilders.patch(API_MENTORS + "/" + mentorId + "/reject")
+                .header(API_KEY_HEADER, API_KEY_VALUE)
+                .contentType(APPLICATION_JSON)
+                .content("{\"reason\": \"" + rejectionReason + "\"}"))
+        .andExpect(status().isConflict())
+        .andExpect(
+            jsonPath("$.message", is("Mentor with ID " + mentorId + " is already rejected")));
+  }
+
+  @Test
+  @DisplayName("Given non-existent mentor, when reject is called, then returns 404 Not Found")
+  void shouldReturnNotFoundWhenRejectingNonExistentMentor() throws Exception {
+    Long nonExistentMentorId = 999L;
+    String rejectionReason = "Not a good fit at this time";
+
+    when(mentorshipService.rejectMentor(eq(nonExistentMentorId), any()))
+        .thenThrow(new MemberNotFoundException(nonExistentMentorId));
+
+    mockMvc
+        .perform(
+            MockMvcRequestBuilders.patch(API_MENTORS + "/" + nonExistentMentorId + "/reject")
+                .header(API_KEY_HEADER, API_KEY_VALUE)
+                .contentType(APPLICATION_JSON)
+                .content("{\"reason\": \"" + rejectionReason + "\"}"))
+        .andExpect(status().isNotFound());
+  }
+
+  @Test
+  @DisplayName(
+      "Given mentor with isWomen=true, when creating mentor, then response includes the field")
+  void shouldReturnIsWomenFieldWhenCreatingMentor() throws Exception {
     Mentor mentor = createMentorTest("Test Mentor");
     mentor =
         Mentor.mentorBuilder()
@@ -280,7 +348,7 @@ class MentorshipControllerTest {
             .skills(mentor.getSkills())
             .menteeSection(mentor.getMenteeSection())
             .profileStatus(ProfileStatus.PENDING)
-            .isWomenNonBinary(true)
+            .isWomen(true)
             .build();
 
     when(mentorshipService.create(any(Mentor.class))).thenReturn(mentor);
@@ -288,13 +356,13 @@ class MentorshipControllerTest {
     mockMvc
         .perform(postRequest(API_MENTORS, mentor))
         .andExpect(status().isCreated())
-        .andExpect(jsonPath("$.isWomenNonBinary", is(true)));
+        .andExpect(jsonPath("$.isWomen", is(true)));
   }
 
   @Test
   @DisplayName(
-      "Given mentors exist, when getting all mentors, then response includes isWomenNonBinary field")
-  void testGetAllMentorsIncludesIsWomenNonBinaryField() throws Exception {
+      "Given mentors exist, when getting all mentors, then response includes isWomen field")
+  void shouldIncludeIsWomenFieldWhenGettingAllMentors() throws Exception {
     MentorDto mentorDto1 = createMentorDtoTest(1L, MemberType.MENTOR);
     mentorDto1 =
         MentorDto.mentorDtoBuilder()
@@ -310,7 +378,7 @@ class MentorshipControllerTest {
             .skills(mentorDto1.getSkills())
             .menteeSection(mentorDto1.getMenteeSection())
             .profileStatus(mentorDto1.getProfileStatus())
-            .isWomenNonBinary(true)
+            .isWomen(true)
             .build();
 
     MentorDto mentorDto2 = createMentorDtoTest(2L, MemberType.MENTOR);
@@ -328,7 +396,7 @@ class MentorshipControllerTest {
             .skills(mentorDto2.getSkills())
             .menteeSection(mentorDto2.getMenteeSection())
             .profileStatus(mentorDto2.getProfileStatus())
-            .isWomenNonBinary(false)
+            .isWomen(false)
             .build();
 
     when(mentorshipService.getAllMentors()).thenReturn(List.of(mentorDto1, mentorDto2));
@@ -336,7 +404,7 @@ class MentorshipControllerTest {
     mockMvc
         .perform(getRequest(API_MENTORS).contentType(APPLICATION_JSON))
         .andExpect(status().isOk())
-        .andExpect(jsonPath("$[0].isWomenNonBinary", is(true)))
-        .andExpect(jsonPath("$[1].isWomenNonBinary", is(false)));
+        .andExpect(jsonPath("$[0].isWomen", is(true)))
+        .andExpect(jsonPath("$[1].isWomen", is(false)));
   }
 }
